--- a/src/modules/header/header.css
+++ b/src/modules/header/header.css
@@ -27,11 +27,6 @@ body.is-pdf-active #head > .l {
     min-width: unset;
 }
 
-/* TODO: delete afte Logseq upd */
-.cp__header > .l, .cp__header > .r {
-    transform: none;
-}
-
 .whiteboard-page {
     padding: 0 !important;
     height: calc(100vh - var(--awUi-header-height)) !important;
@@ -42,11 +37,17 @@ body.is-pdf-active #head > .l {
 }
 
 .ls-window-controls .window-controls {
-    top: 3px;
+    top: 7px;
+    right: 6px;
+    gap: 4px;
 }
 
 .ls-window-controls .window-controls .button {
     z-index: 100;
-    height: 36px;
-    width: 36px;
+    height: 30px;
+    width: 30px;
+    padding: 0;
+    outline: 1px dotted var(--ls-border-color);
+    border-radius: 4px;
+    box-shadow: 1px 1px 1px 0px var(--ls-border-color);
 }
