--- a/src/modules/sidebars/compactSidebarMenu/compactSidebarMenu.css
+++ b/src/modules/sidebars/compactSidebarMenu/compactSidebarMenu.css
@@ -6,7 +6,7 @@
     flex-direction: row;
     gap: 4px;
     height: 30px;
-    margin-top: 0;
+    margin-top: 6px;
 }
 #left-sidebar .nav-content-item {
     margin-top: 0;
